# division_engine_rust

./: .gitignore  .gitmodules  Cargo.toml  build.rs
division_engine_c/: CMakeLists.txt
division_engine_c/glfw_internal/: CMakeLists.txt
division_engine_c/glfw_internal/include/: glfw_uniform_buffer.h  glfw_vertex_buffer.h
division_engine_c/glfw_internal/lib/glad/include/glad/: gl.h
division_engine_c/glfw_internal/src/: glfw_render_pass.c  glfw_renderer.c  glfw_shader.c  glfw_uniform_buffer.c  glfw_vertex_buffer.c
division_engine_c/include/: context.h  division_engine_state.h  list_utility.h  renderer.h  settings.h  shader.h  shader_program.h  state.h  vertex_buffer.h  window.h
division_engine_c/include/division_engine/: color.h  context.h  platform_renderer.h  render_pass.h  renderer.h  settings.h  shader.h  state.h  uniform_buffer.h  variable_type.h  vertex_attribute.h  vertex_buffer.h
division_engine_c/include/division_engine/platform_internal/: platform_render_pass.h  platform_renderer.h  platform_uniform_buffer.h  platform_vertex_buffer.h  platfrom_shader.h
division_engine_c/lib/glad/include/glad/: gl.h  glad.h
division_engine_c/lib/glad/src/: glad.c
division_engine_c/osx_metal_internal/: CMakeLists.txt
division_engine_c/osx_metal_internal/include/: DivisionOSXAppDelegate.h  DivisionOSXViewDelegate.h  NSUtils.h  osx_render_pass.h  osx_shader_context.h  osx_uniform_buffer.h  osx_vertex_buffer.h  osx_window_context.h
division_engine_c/osx_metal_internal/lib/metal/: CMakeLists.txt
division_engine_c/osx_metal_internal/lib/metal/metal-cpp/: LICENSE.txt
division_engine_c/osx_metal_internal/src/: DivisionOSXAppDelegate.cpp  DivisionOSXViewDelegate.cpp  osx_metal_renderer.cpp  osx_metal_shader.cpp  osx_metal_uniform_buffer.cpp  osx_metal_vertex_buffer.cpp  osx_render_pass.cpp
division_engine_c/src/: context.c  render_pass.c  renderer.c  shader.c  shader_program.c  uniform_buffer.c  vertex_attribute.c  vertex_buffer.c  window.c
division_engine_c/src/glfw_impl/: glfw_renderer.c
division_engine_c/src/glfw_internal/: glfw_renderer.c  glfw_shader.c  glfw_vertex_buffer.c
division_engine_c/tests/: main.c
division_engine_c/tests/shaders/: test.frag  test.metal  test.vert
examples/: canvas_example.rs  core_example.rs  core_wrapper.rs  main.rs
macro/: Cargo.toml
macro/src/: lib.rs
resources/shaders/: default_ui.frag  default_ui.vert  test.frag  test.vert
resources/shaders/canvas/: font.frag  font.vert  rect.frag  rect.vert  solid_shape.frag  solid_shape.vert
src/: engine_state.rs  lib.rs  main.rs
src/canvas/: border_radius.rs  color.rs  decoration.rs  font_texture.rs  mod.rs  rect.rs  rect_draw_system.rs  rect_drawer.rs  rect_renderer.rs  renderable_rect.rs  renderable_text.rs  renderer.rs  text_draw_system.rs  text_renderer.rs
src/core/: context.rs  context_builder.rs  core.rs  core_builder.rs  core_delegate.rs  core_runner.rs  core_state.rs  division_core.rs  division_core_builder.rs  division_core_delegate.rs  division_core_render_pass.rs  division_core_shader.rs  division_core_texture.rs  division_core_uniform_buffers.rs  division_core_vertex_buffer.rs  font.rs  font_texture.rs  image.rs  input.rs  lifecycle_manager.rs  mod.rs  render_pass.rs  shader.rs  texture.rs  uniform_buffer.rs  vertex_buffer.rs
src/core/c_interface/: context.rs  font.rs  lifecycle.rs  mod.rs  render_pass.rs  renderer.rs  settings.rs  shader.rs  state.rs  stb.rs  texture.rs  uniform_buffer.rs  vertex_buffer.rs
src/core/data_structures/: mod.rs  sparse_set.rs
src/core/data_structures/tests/: mod.rs  sparse_set_tests.rs
src/core/ffi/: context.rs  font.rs  input.rs  keycode.rs  lifecycle.rs  mod.rs  render_pass_descriptor.rs  render_pass_instance.rs  settings.rs  stb.rs  texture.rs  vertex_buffer.rs
src/core/interface/: context.rs  mod.rs  render_pass.rs  renderer.rs  settings.rs  shader.rs  state.rs  texture.rs  uniform_buffer.rs  vertex_buffer.rs
src/core_interface/: settings.rs
src/division_engine/: mod.rs
src/division_engine/bridge/: division_engine_handler.rs  mod.rs  renderer.rs  shader.rs  vertex_buffer.rs  window.rs
src/division_engine/core_interface/: context.rs  mod.rs  settings.rs  state.rs
src/division_engine/math/: matrix4x4.rs
src/division_engine/rendering/: mod.rs  renderer.rs  shader_program.rs  shader_program_builder.rs
src/division_engine_c/: division_engine_handler.rs  mod.rs  shader.rs  vertex_buffer.rs  window.rs
src/macro/: Cargo.toml
src/shader_compiler/interface/: mod.rs
src/utility/: image.rs  mod.rs  shader.rs
