[package]
name = "division_engine_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.49"
division_shader_compiler_rust = { git = "https://github.com/Den163/division_shader_compiler_rust", tag = "v0.1.1" }
fs_extra = "1.2.0"
walkdir="2.3.3"

[target.'cfg(target_arch="x86_64")'.dependencies]
division_math = { git = "https://github.com/Den163/division_math", tag = "v0.1.1", features=[] }

[target.'cfg(target_arch="arm")'.dependencies]
division_math = { git = "https://github.com/Den163/division_math", tag = "v0.1.1", features = ["enable_simd"] }

[dependencies]
bitflags="2.3.1"

[dev-dependencies]
stb_image_rust="2.27.2"
walkdir="2.3.3"
